dmmbs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dmmbs-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmmbs-web
  template:
    metadata:
      labels:
        app: dmmbs-web
    spec:
      containers:
      - name: dmmbs-web-cont
        image: pairegistry.azurecr.io/dmmbs-web
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: dmmbs-web
spec:
  selector:
    app: dmmbs-web
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dmmbs-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmmbs-lb
  template:
    metadata:
      labels:
        app: dmmbs-lb
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: dmmbs-lb
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: dmmbs-lb
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dmmbs-lb
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dmmbs-was
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmmbs-was
  template:
    metadata:
      labels:
        app: dmmbs-was
    spec:
      containers:
      - name: dmmbs-was-cont
        image: pairegistry.azurecr.io/dmmbs-was
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: dmmbs-was
spec:
  selector:
    app: dmmbs-was
  ports:
    - name: was
      protocol: TCP
      port: 8100
      targetPort: 8080
