ingress.yaml
#ingress 설정 (외부에서 웹 파드에 접속 허용)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: "paiworld.co.kr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dmmbs-web
            port:
              number: 8000
      - path: /backoffice
        pathType: Prefix
        backend:
          service:
            name: dmmbs-was
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dmmbs-was
            port:
              number: 8080
